[package]
name = "critters"
version = "0.1.0"
authors = ["Ilya Sheprut <optitel223@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
macroquad = { git = "https://github.com/not-fl3/macroquad", branch = "0.3", rev = "904e167" }
num-bigint = "0.3.1"